<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_env_dream"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_dream"
        />
    <Button
        android:id="@+id/button_env_alloc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_alloc"
        />
    <Button
        android:id="@+id/button_env_spec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_spec"
        />
    
    <Button
        android:id="@+id/button_env_move"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_move"
        />
    
    <Button
        android:id="@+id/button_env_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_item"
        />
    
    <Button
        android:id="@+id/button_env_ability"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_env_ability"
        />
    

</LinearLayout>